examples/test/testpolicy18822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18822
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key11: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value5
          key20: value4
      podSelector:
        matchLabels:
          key43: value38
          key11: value3
